--- a/src/Assests/css/Portfolio.css
+++ b/src/Assests/css/Portfolio.css
@@ -10,6 +10,10 @@
     --text-black-50:#e8dfec;
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 body
 {
     margin: 0;
@@ -32,7 +36,7 @@ body
     box-sizing: border-box;
 }
 
-ul
+.aside ul
 {
     list-style: none;
 }
@@ -61,8 +65,8 @@ ul
 {
     flex: 0 0 100%;
     max-width: 100%;
-    margin-bottom: 60px;
-    margin-top: 15px;
+    margin-bottom: 40px;
+    margin-top: 10px;
 }
 
 .section-title h2
@@ -135,7 +139,6 @@ ul
     box-shadow: 0 0 20px rgba(48, 46, 77, 0.15);
 }
 
-
 .aside
 { 
     display: flex;
@@ -172,8 +175,10 @@ ul
     border-bottom: 1px solid var(--text-black-50);
 }
 
-.aside .nav li a.active{
-    color: var(--skin-color);
+.aside .nav li a i{
+    font-size: 20px;
+    align-self: center;
+    vertical-align:top;
 }
 
 .aside .nav li i{
@@ -205,16 +210,16 @@ ul
     font-size: 1.7rem;
 }
 
-/* Home */
+/* about */
 
-.home
+.about
 {
     min-height: 100vh;
     display: flex;
     color: var(--text-black-900);
 }
 
-.home .home-info
+.about .about-info
 {
     flex: 0 0 60%;
     max-width: 60%;
@@ -245,13 +250,13 @@ h3.my-profession
     color: var(--skin-color);
 }
 
-.home-info p{
+.about-info p{
     margin-bottom: 70px;
     font-size: 20px;
     color: var(--text-black-700);
 }
 
-.home-info .social i
+.about-info .social i
 {
     margin-top: 50px;
     font-size: 35px;
@@ -259,7 +264,7 @@ h3.my-profession
     color: var(--skin-color);
 }
 
-.home .home-img
+.about .about-img
 {
     flex: 0 0 40%;
     max-width: 40%;
@@ -267,7 +272,7 @@ h3.my-profession
     position: relative;
 }
 
-.home .home-img img
+.about .about-img img
 {
     margin: auto;
     border-radius: 5px;
@@ -277,161 +282,39 @@ h3.my-profession
 
 
 
-/* About */
+/* skills */
 
-.about .about-content
+.skills .skills-content
 {
     flex: 0 0 100%;
     max-width: 100%;
 
 }
 
-.about .about-content .about-text
-{
-    flex: 0 0 100%;
-    max-width: 100%;
-}
-
-.about .about-content .about-text h3
-{
-    font-size: 24px;
-    margin-bottom: 15px;
-    font-weight: 700;
-    color: var(--text-black-900);
-}
-
-.about .about-content .about-text h3 span
-{
-    color: var(--skin-color);
-}
-
-.about .about-content .about-text p{
-    font-size: 16px;
-    line-height: 25px;
-    color: var(--text-black-700);
-}
-
-.about .about-content .personal-info
-{
-    flex: 0 0 60%;
-    max-width: 60%;
-    margin-top: 40px;
-}
-
-.about .about-content .personal-info .info-item
+.skills .skills-content .education
 {
     flex: 0 0 50%;
     max-width: 50%;
-}
-
-.about .about-content .personal-info .info-item p{
-    font-weight: 600;
-    padding: 10px 0;
-    font-size: 16px;
-    color: var(--text-black-900);
-    border-bottom: 1px solid var(--bg-black-50);
-}
-
-.about .about-content .personal-info .info-item p span{
-    font-weight: 400;
-    color: var(--text-black-700);
-    margin-left: 4px;
-    display: inline-block;
-}
-
-.about .about-content .personal-info .buttons
-{
-    margin-top: 30px;
-}
-
-.about .about-content .personal-info .buttons .btn
-{
-    margin-right: 15px;
     margin-top: 10px;
 }
 
-.about .about-content  .skills
-{
-    flex: 0 0 40%;
-    max-width: 40%;
-    margin-top: 40px;
-}
-
-.about .about-content  .skills .skill-item
-{
-    flex: 0 0 100%;
-    max-width: 100%;
-    margin-bottom: 15px;
-}
-
-.about .about-content  .skills .skill-item h5
-{
-    line-height: 40px;
-    font-weight: 600;
-    font-size: 16px;
-    color: var(--text-black-900);
-    text-transform: capitalize;
-}
-
-.about .about-content  .skills .skill-item .progress{
-    background-color: var(--bg-black-50);
-    height: 7px;
-    border-radius: 4px;
-    width: 100%;
-    position: relative;
-}
-
-.about .about-content  .skills .skill-item .progress-in{ 
-    position: absolute;
-    left: 0;
-    top: 0;
-    height: 100%;
-    border-radius: 4px;
-    background-color: var(--skin-color);
-    animation: moveside 4s linear forwards;
-}
-
-@keyframes moveside{
-    0%{
-        width: 0;
-    }
-    100%{
-        height: 100%;
-    }
-}
-
-.about .about-content .skills .skill-item .skill-percent 
-{
-    position: absolute;
-    right: 0;
-    color: var(--text-black-900);
-    top: -40px;
-    font-weight: 400;
-    line-height: 40px;
-}
-
-.about .about-content .education
-{
-    flex: 0 0 50%;
-    max-width: 50%;
-    margin-top: 30px;
-}
-
-.about .about-content h3.section-title{
+.skills .skills-content h3.section-title{
     font-size: 24px;
     margin-bottom: 30px;
     font-weight: 700;
     color: var(--bg-black-900);
 }
 
-.about .about-content .timeline-box
+.skills .skills-content .timeline-box
 {
     flex: 0 0 100%;
-    max-width: 100%;
-    margin-top: 15px;
+    max-width: 95%;
+    margin-top: 1.5rem;
+    margin: 10px;
+    padding: 10px;
 }
 
-.about .about-content .timeline
+.skills .skills-content .timeline
 {
     background-color: var(--bg-black-100);
     padding: 30px 15px;
@@ -441,19 +324,19 @@ h3.my-profession
     position: relative;
 }
 
-.about .about-content .timeline .timeline-item
+.skills .skills-content .timeline .timeline-item
 {
     position: relative;
     padding-left: 37px;
     padding-bottom: 50px;
 }
 
-.about .about-content .timeline .timeline-item:last-child
+.skills .skills-content .timeline .timeline-item:last-child
 {
     padding-bottom: 0;
 }
 
-.about .about-content .timeline .timeline-item::before
+.skills .skills-content .timeline .timeline-item::before
 {
     content: '';
     width: 1px;
@@ -474,7 +357,7 @@ h3.my-profession
     }
 }
 
-.about .about-content .timeline .circle-dot
+.skills .skills-content .timeline .circle-dot
 {
     position: absolute;
     left: 0;
@@ -485,7 +368,7 @@ h3.my-profession
     background-color: var(--skin-color);
 }
 
-.about .about-content .timeline .timeline-date
+.skills .skills-content .timeline .timeline-date
 {
     font-weight: 400;
     font-size: 14px;
@@ -493,11 +376,11 @@ h3.my-profession
     color: var(--text-black-700);
 }
 
-.about .about-content .timeline .timeline-date .fa{
+.skills .skills-content .timeline .timeline-date .fa{
     margin-right: 5px;
 }
 
-.about .about-content .timeline .timeline-title
+.skills .skills-content .timeline .timeline-title
 {
     font-weight: 700;
     font-size:18px;
@@ -506,7 +389,7 @@ h3.my-profession
     color: var(--text-black-900);
 }
 
-.about .about-content .timeline .timeline-text
+.skills .skills-content .timeline .timeline-text
 {
     line-height: 25px;
     font-size:16px;
@@ -514,68 +397,50 @@ h3.my-profession
     color: var(--text-black-700);
 }
 
+/*Skills list*/
 
-/* Service */
-
-.service .service-item
+.skills .skills-content .skill-list
 {
-    margin-bottom: 30px;
-    flex: 0 0 33.33%;
-    max-width: 33.33%;
+    flex: 0 0 50%;
+    margin-top: 10px;
 }
 
-.service .service-item .service-item-inner
+.skills .skills-content .skill-list .skill-list-container
 {
-    background-color: var(--bg-black-100);
-    border: 1px solid var(--bg-black-50);
+    margin-left: 60px;
+}
+
+.skills .skills-content .skill-list .skill-list-container .skill-list-box-container{
+    margin-top: 3px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.skills .skills-content .skill-list .skill-list-container .skill-list-box{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 8.5rem;
+    height: 8.5rem;
+    border: 1px solid var(--skin-color);
     border-radius: 10px;
-    padding: 10px;
-    text-align: center;
-    transition: all 0.3s ease ;
+    margin: 15px;
 }
 
-.service .service-item .service-item-inner:hover{
-    box-shadow: 0 0 20px rgba(48,46,77,0.15);
+.skills .skills-content .skill-list .skill-list-container .skill-list-box:hover{
+    transform: scale(1.05);
 }
 
-.service .service-item .service-item-inner .icon{
-    height: 60px;
-    width: 60px;
-    border-radius: 50%;
-    display: block;
-    margin: 0 auto 30px;
-    text-align: center;
-    transition: all 0.3s ease;
+.skills .skills-content .skill-list .skill-list-container .skill-list-box i{
+    color: var(--skin-color);
+    font-size: 30px;
 }
 
-.service .service-item .service-item-inner .icon .fa,.service .service-item .service-item-inner .icon .fab{
-    font-size: 35px;
-    line-height: 60px;
+.skills .skills-content .skill-list .skill-list-container .skill-list-box p{
+    margin-top: 8px;
     color: var(--skin-color);
 }
-
-.service .service-item .service-item-inner:hover .icon{
-    background-color: var(--skin-color);
-}
-
-.service .service-item .service-item-inner:hover .icon .fa, .service .service-item .service-item-inner:hover .icon .fab{
-    color: white;
-}
-
-.service .service-item .service-item-inner h4{
-    font-size: 18px;
-    margin-bottom: 15px;
-    color: var(--text-black-900);
-    text-transform: capitalize;
-}
-
-.service .service-item .service-item-inner p{
-    font-size: 16px;
-    color: var(--text-black-700);
-    line-height: 25px;
-    text-align: justify;
-}
-
 
 /* Portfolio */
 
@@ -632,6 +497,15 @@ h3.my-profession
 .portfolio .portfolio-item-p
 {
     margin-top: 5%;
+}
+
+.portfolio .portfolio-item ul p{
+    margin-top: 5%;
+}
+
+.portfolio .portfolio-item ul li{
+    color: var(--text-black-700);
+    margin-left: 20px;
 }
 
 /* Contact */
@@ -703,7 +577,7 @@ h3.my-profession
         background-color: var(--bg-black-900);
     }
 
-    .aside .nav li a .fa
+    .aside .nav li a i
     {
         display: none;
     }
@@ -721,7 +595,7 @@ h3.my-profession
         padding: 5px;
     }
 
-    .about .about-content .personal-info .info-item p span{
+    .skills .skills-content .personal-info .info-item p span{
         display: block;
         margin-left: 0;
     }  
@@ -729,7 +603,7 @@ h3.my-profession
 
 @media(max-width: 991px)
 {
-    .about .about-content .education,
+    .skills .skills-content .education,
     .contact .contact-info-item
     .profolio .portfolio-item ,
     .service .service-item
@@ -738,14 +612,14 @@ h3.my-profession
         max-width: 50%;
     }
 
-    .home .home-info
+    .about .about-info
     {
         order: 2;
         flex: 0 0 100%;
         max-width: 100%;
     }
 
-    .home .home-img
+    .about .about-img
     {
         flex: 0 0 100%;
         max-width: 100%;
@@ -755,11 +629,33 @@ h3.my-profession
         margin-top: 8%;
     }
 
-    .about .about-content  .skills .skill-item
+    .skills .skills-content  .skills .skill-item
     {
         flex: 0 0 100%;
         max-width: 90%;
         margin-left: 5%;
+    }
+}
+
+@media(max-width:814px){
+
+    .skills .skills-content .education
+    {
+        flex: 0 0 100%;
+        max-width: 100%;
+        margin-top: 10px;
+        order: 2;
+    }
+
+    .skills .skills-content .skill-list
+    {
+        flex: 0 0 100%;
+        margin-top: 10px;
+    }
+
+    .skills .skills-content .skill-list .skill-list-container
+    {
+        margin-left: 10px;
     }
 }
 
@@ -770,9 +666,9 @@ h3.my-profession
     .contact .contact-info-item,
     .portfolio .portfolio-item,
     .service .service-item,
-    .about .about-content .education,
-    .about .about-content .personal-info ,
-    .about .about-content .skills
+    .skills .skills-content .education,
+    .skills .skills-content .personal-info ,
+    .skills .skills-content .skills
     {
         flex: 0 0 100%;
         max-width: 100%;
