--- a/src/Assests/css/Portfolio.css
+++ b/src/Assests/css/Portfolio.css
@@ -57,7 +57,7 @@ body
 }
 
 .section .container{
-    padding-top: 60px;
+    padding-top: 70px;
     padding-bottom: 70px;
 }
 
@@ -66,7 +66,6 @@ body
     flex: 0 0 100%;
     max-width: 100%;
     margin-bottom: 40px;
-    margin-top: 10px;
 }
 
 .section-title h2
@@ -350,16 +349,6 @@ h3.my-profession
     left: 7px;
     top: 0;
     background-color: var(--skin-color);
-    animation: moveline 3s linear forwards;
-}
-
-@keyframes moveline{
-    0%{
-        height:0;
-    }
-    100%{
-        height: 100%;
-    }
 }
 
 .skills .skills-content .timeline .circle-dot
@@ -400,6 +389,8 @@ h3.my-profession
     font-size:16px;
     text-align: justify;
     color: var(--text-black-700);
+    padding: 10px;
+    margin: 10px;
 }
 
 /*Skills list*/
@@ -442,15 +433,6 @@ h3.my-profession
     color: var(--skin-color);
     font-size: 30px;
     animation: skillIcon 3.5s infinite;
-}
-
-@keyframes skillIcon {
-    0% {
-        transform: rotateY(0);
-    }
-    100% {
-        transform: rotateY(360deg);
-    }
 }
 
 .skills .skills-content .skill-list .skill-list-container .skill-list-box i{
