minor changes in css

--- a/src/Assests/css/Portfolio.css
+++ b/src/Assests/css/Portfolio.css
@@ -476,7 +476,7 @@ p {
 
 @media(max-width:710px) {
 
-    .section-3 {
+    .section-3 , .section-2, .section-1, .section-4 {
         padding: 15% 0% 5% 5%;
     }
 
